# FactorioLauncher

./: .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
src/: Instance.cpp  Instance.h  main.cpp  main2.cpp  settings.cpp  settings.h
